create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -770,6 +770,9 @@ h6,
 #extFeatures14-6 P {
   font-size: 19px;
 }
+#content1-1q DIV {
+  color: #ffffff;
+}
 #content1-7 P {
   font-size: 19px;
 }
