--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -738,7 +738,7 @@ h6,
 }
 #ext_menu-2 .link[aria-expanded="true"],
 #ext_menu-2 .dropdown-item[aria-expanded="true"] {
-  color: #c0a375!important;
+  color: #e25041!important;
 }
 #ext_menu-2 .btn {
   font-size: 12px;
